# epub-llm

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  QUICK_MCP_SETUP.md  README.md  check  diagnose_mcp.py  fix  main.py  mypy  mypy.ini  pylint  pyproject.toml  quality_check.py  requirements-dev.txt  requirements.txt  run_server.py  start.sh  start_mcp.py
.github/: copilot-instructions.md
config/: app_config.yaml  claude_desktop_config.json  claude_desktop_config_stable.json  smart_rag_config.yaml
docs/: design.md  mcp-server-setup.md  mcp-setup.md  rag_sample_corpus.md  requirements.md  rule.md  smart-rag-features.md  todo.md
examples/: sample_rag_demo.py  test_mcp_client.py
scripts/: build_mlx_index.py  check  dev_server.py  dev_watch.py  diagnose_mcp.py  fix  pylint  test_and_search.py  test_mlx_api.py  test_mlx_faiss.py
src/: __init__.py  app.py  common_util.py  config_manager.py  embedding_util.py  enhanced_epub_service.py  epub_service.py  epub_util.py  history_util.py  llm_util.py  mcp_server.py  mlx_embedding_service.py  mlx_faiss_integration.py  query_expansion_util.py  rag_util.py  rerank_util.py  sample_rag_system.py  server.py  simple_epub_service.py  smart_rag_util.py
static/: chat.js  style.css
templates/: bookshelf.html  chat.html  mcp_setup.html  reader.html  settings.html
templates/partials/: header.html
test/: conftest.py  test_app_security.py  test_embedding_util.py  test_embedding_util_additional.py  test_epub_util.py  test_faiss_book_query.py  test_history_util.py  test_list_books.py  test_markdown_stream_api.py  test_mlx_e2e.py  test_prompt_logging.py  test_query_logging.py  test_rag_util.py  test_sample_rag_system.py
