[project]
name = "epub-llm"
version = "0.1.0"
description = "EPUB-based Language Learning Model with RAG support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    # ML/AI Libraries
    "mlx-lm>=0.25.2",
    "mlx-embeddings>=0.0.3",
    "numpy>=1.24.0",
    "faiss-cpu>=1.11.0",
    # Text Processing
    "ebooklib>=0.19",
    "beautifulsoup4>=4.12.0",
    # MCP Support
    "fastmcp>=2.9.0",
    # Utilities
    "requests>=2.32.4",
    "aiofiles>=24.0.0",
    # Development (optional)
    "types-requests>=2.32.4.20250611",
    "mypy>=1.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]

[project.scripts]
epub-llm = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
