[project]
name = "epub-app"
version = "0.1.0"
description = "EPUB management and reading application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    # Text Processing
    "ebooklib>=0.19",
    "beautifulsoup4>=4.12.0",
    # MCP Support
    "fastmcp>=2.9.0",
    # Utilities
    "requests>=2.32.4",
    "aiofiles>=24.0.0",
    "pyyaml>=6.0.2",
    # Development (optional)
    "types-requests>=2.32.4.20250611",
    "mypy>=1.16.1",
    # Embedding (MLX)
    "mlx-lm>=0.19.0",
    # 明示的にコア mlx も指定（mlx-lm が依存解決するがバージョン固定のため）
    "mlx>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]

[project.scripts]
epub-app = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# -q は test 実行時に追加されるため明示不要だが、警告抑制のみ設定
filterwarnings = [
    # faiss / SWIG 周りの Python 3.12 DeprecationWarning 雑音抑制
    "ignore::DeprecationWarning:faiss.loader",
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]
markers = [
    "timeout: テストごとのタイムアウト (pytest-timeout)"
]

[[tool.mypy.overrides]]
module = [
    "ebooklib",
    "ebooklib.epub",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "R0801",  # Similar lines in files
    "C0301",  # Line too long
    "W0718",  # Catching too general exception
    "C0415",  # Import outside toplevel
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "R0903",  # Too few public methods
    "R0917",  # Too many positional arguments
    "E1120",  # No value for argument (false positive for faiss)
]
